--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -9,6 +13,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+#unsupportedAssetsContainer {
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 * {
