--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,11 +14,20 @@
 
 .footer {
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 1rem 0;
+  margin-top: 1em;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+}
+
+#unsupportedAssetsContainer {
+  display: grid;
+  grid-gap: 40px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .footer a {
