--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,19 +6,20 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color:rgb(248, 241, 241);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+#unsupportedAssetsContainer {
+  display: grid;
+  grid-gap: 40px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-#unsupportedAssetsContainer {
-    display: grid;
-    grid-gap: 40px;
-    grid-template-columns: repeat(2, 1fr);
 }
 
 * {
