--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,12 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
+#collectionLoansContainer {
+    display: grid;
+      grid-gap: 20px;
+      grid-template-columns: repeat(3, 1fr);
+}
+
 a {
   color: inherit;
   text-decoration: none;
