--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -111,6 +111,17 @@
   margin-left: 0.5rem;
 }
 
+.nav {
+  margin-top: 1000px;
+  list-style: none;
+  padding-left: 0;
+  color: blue;
+}
+
+.nav li {
+  display: inline-block;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
