Change css classes name

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -111,7 +111,7 @@
   margin-left: 0.5rem;
 }
 
-.header_center {
+.headerCenter {
   display: flex;
   -webkit-box-align: center;
   align-items: center;
@@ -120,7 +120,7 @@
   right: 0;
 }
 
-.header_logo {
+.headerLogo {
   width: 100%;
   max-width: 1600px;
   display: flex;
@@ -131,9 +131,9 @@
   justify-content: space-between;
 }
 
-.header_logo_img {
+.headerLogoImg {
   width: 3em;
-  height: 3em;
+  height: em;
 }
 
 .nav {
@@ -158,17 +158,17 @@
   min-width: 180px;
 }
 
-.index_describe {
+.indexDescribe {
   display: flex;
   flex-direction: column;
 }
 
-.index_protocol_describe {
+.indexProtocolDescribe {
   padding: 20px;
   font-size: 2rem;
 }
 
-.index_protocol_describe_more {
+.indexProtocolDescribe2 {
   padding: 20px;
   font-size: 1.5rem;
   max-width: 350px;
