--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,9 +5,12 @@
 .main {
   min-height: 75vh;
   padding: 2rem 0;
-  flex: 1;
+}
+
+.mainInfo {
+  min-height: 75vh;
+  padding: 2rem 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -19,7 +22,7 @@
   right: 0;
   padding: 1rem 0;
   margin-top: 1em;
-  border-top: 1px solid #eaeaea;
+  border-top: 2px solid #eaeaea;
   justify-content: center;
   align-items: center;
 }
