--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
 }
 
 .main {
-  min-height: 75vh;
+  min-height: 78vh;
   padding: 2rem 0;
 }
 
@@ -24,9 +24,9 @@
   left: 0;
   bottom: 0;
   right: 0;
-  padding: 1rem 0;
+  padding: 20px 0;
   margin-top: 1em;
-  border-top: 2px solid #eaeaea;
+  border-top: 2px solid #d8d8d8;
   justify-content: center;
   align-items: center;
 }
