--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,15 @@
 }
 
 .mainIndex {
+  background-image: url("/paris-pixelated-bg.png");
+  background-size: auto;
+}
+
+.opac {
+  width: 100%;
+  height: 100%;
   padding: 2rem 4rem;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .mainInfo {
@@ -177,10 +185,12 @@
 .indexDescribeTitle {
   padding: 2rem;
   font-size: 2rem;
+  font-weight: 1000;
 }
 
 .indexDescribeSubtitle {
   padding: 60px;
+  font-weight: 600;
   font-size: 1.5rem;
 }
 
