update background image behaviour

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,7 +9,7 @@
 
 .mainIndex {
   background-image: url("/paris-pixelated-bg.png");
-  background-size: auto;
+  background-size: cover;
 }
 
 .opac {
