--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,11 +10,13 @@
 .mainIndex {
   background-image: url("/paris-pixelated-bg.png");
   background-size: cover;
+  min-height: 100vh;
 }
 
 .opac {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   padding: 2rem 4rem;
   background: rgba(255, 255, 255, 0.8);
 }
