center index header

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -132,6 +132,7 @@
   display: flex;
   -webkit-box-align: center;
   align-items: center;
+  justify-content: center;
   padding: 28px;
   left: 0;
   right: 0;
