--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -203,9 +203,7 @@
   .indexDescribe {
     padding: 1rem 4rem;
   }
-  .indexDescribeTitle {
-    padding: 1rem;
-  }
+
   .indexDescribeSubtitle {
     padding-left: 20px;
     padding-right: 20px;
@@ -232,7 +230,7 @@
   }
 
   .indexDescribe {
-    padding: 0;
+    padding: 0.5rem;
   }
 
   .indexDescribeTitle {
@@ -244,5 +242,9 @@
     padding: 0;
     margin-top: 64px;
     font-size: large;
+  }
+
+  .headerCenter {
+    padding: 0;
   }
 }
