--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,12 @@
   padding: 2rem 0;
 }
 
+.mainIndex {
+  background-image: url("/lisbon-pixelated-bg.png");
+  background-size: cover;
+  min-height: 100vh;
+}
+
 .opac {
   width: 100%;
   height: 100%;
