--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -156,15 +156,18 @@
 
 .nav {
   display: flex;
+  border: 2px solid #adbed1;
   justify-content: flex-end;
   -webkit-box-align: center;
+  border-radius: 25px;
   align-items: center;
   margin-left: 50px;
+  padding: 15px;
   font-family: monospace;
 }
 
 .nav li {
-  margin-left: 80px;
+  margin: 0 25px;
 }
 
 .nav a {
@@ -217,8 +220,7 @@
   }
 
   .nav {
-    flex-direction: column;
-    margin-left: 0px;
+    margin: 8px;
   }
 
   .headerLogo {
@@ -245,6 +247,6 @@
   }
 
   .headerCenter {
-    padding: 0;
+    padding: 20px;
   }
 }
