--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -168,6 +168,7 @@
 
 .nav li {
   margin: 0 25px;
+  font-weight: bold;
 }
 
 .nav a {
@@ -202,6 +203,7 @@
 @media (max-width: 1080px) {
   .nav li {
     margin-left: 20px;
+    font-weight: bold;
   }
   .indexDescribe {
     padding: 1rem 4rem;
@@ -220,7 +222,7 @@
   }
 
   .nav {
-    margin: 8px;
+    margin: 4px;
   }
 
   .headerLogo {
@@ -229,6 +231,7 @@
 
   .nav li {
     margin: 10px;
+    font-weight: bold;
   }
 
   .indexDescribe {
